# inference

./: .dockerignore  .gitignore  CHANGELOG.md  Makefile  README.md  pyproject.toml
.github/: dependabot.yml
.github/workflows/: build.yml  release.yml  security.yml
docker/: gliner.Dockerfile  ner.Dockerfile  ocr.Dockerfile  paddle.Dockerfile
docs/: README.md
docs/design/: gliner.md  ocr-engine.md  ocrvlm.md  tocr.md
docs/openapi/: README.md  ner.json  ocr.json  ocrvl.json  vl.json
proto/: README.md
scripts/: gen_openapi.py  gen_requirements.py
