[project]
name = "nvisy-inference"
version = "0.1.0"
description = "Externalized model inference for nvisy (BentoML HTTP services)"
readme = "README.md"
requires-python = "==3.12.*"
license = "Apache-2.0"
authors = [{ name = "Nvisy" }]

[tool.uv.workspace]
members = ["packages/*"]

[tool.uv.sources]
nvisy-core = { workspace = true }

[tool.uv]
required-version = ">=0.7"

[dependency-groups]
dev = [
    "httpx>=0.27",
    "pytest>=8",
    "ruff>=0.11",
]

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM", "RUF"]

[tool.ruff.format]
docstring-code-format = true

[tool.pytest.ini_options]
testpaths = ["packages"]
# importlib mode lets same-named test modules (test_service.py) coexist across
# packages without __init__.py files — see the src layout in packages/*.
addopts = "--import-mode=importlib"
